# lab04

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml  linux.yml  windows.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
